kubernetes/apps/teslamateapi/proxy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-teslamateapi
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: proxy-teslamateapi
      app.kubernetes.io/instance: proxy-teslamateapi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: proxy-teslamateapi
        app.kubernetes.io/instance: proxy-teslamateapi
    spec:
      containers:
        - name: proxy
          image: ghcr.io/beryju/istio-proxy
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
              name: http
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 25m
              memory: 100Mi
          volumeMounts:
            - name: auth
              mountPath: /etc/nginx/auth
              readOnly: true
      volumes:
        - name: auth
          secret:
            secretName: proxy-teslamateapi-auth
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-teslamateapi
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8888
  selector:
    app.kubernetes.io/name: proxy-teslamateapi
    app.kubernetes.io/instance: proxy-teslamateapi
  type: ClusterIP
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: proxy-teslamateapi
spec:
  hostnames: ["teslamateapi.chkpwd.com"]
  parentRefs:
    - name: public
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - name: proxy-teslamateapi
          port: 8888
